[JENKINS-38096] Add support for Pipeline Job in GitHub Authorization Strategy.

--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
             <version>3.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-job</artifactId>
+            <version>2.0</version>
+        </dependency>
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.powermock</groupId>
