--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
             <groupId>org.jenkins-ci.plugins.workflow</groupId>
             <artifactId>workflow-job</artifactId>
             <version>2.0</version>
+            <optional>true</optional>
         </dependency>
 
         <!-- Test dependencies -->
